# ai_mario

./: .gitignore  CMakeLists.txt  EvolutionaryAlgorithm.py  EvolutionaryAlgorithmTest.py  README.md  RandomAgent.py  SequentialAgent.py  StateTransform.py  bootstrap.py  example.py  game.cpp  game.hpp  game_facade.hpp  game_facade_implementation.cpp  game_facade_implementation.hpp  game_test.cpp  keyboard_control.cpp  keyboard_control.hpp  keyboard_control_test.cpp  keyboard_facade.hpp  keyboard_facade_implementation.cpp  keyboard_facade_implementation.hpp  main.cpp  mario.py  mario2.py  offset.hpp  print_error.cpp  print_error.hpp  requirements.txt  tensorflow.cpp  tensorflow.hpp  tensorflow_test.cpp  tensorflow_test.hpp  time_oracle.hpp  time_oracle_implementation.cpp  time_oracle_implementation.hpp  window_handle.cpp  window_handle.hpp
